reviews/reviews.css
/* ... */
  .dt-paging-button{height: 1.5em; width: 1rem; font-size: .75rem;}
  .list-span-filler{height: 5rem; width: 100%; display: none; visibility: hidden;}

  #reviews{
  width: 80%;
  display: flex;
  flex-direction: column;
    } 

        /*controls for sorting*/
      
        .dt-layout-row .dt-length {display: flex; justify-content: start;}

        #custom-controls-container {
          display: flex; flex-direction: row; width: 100%; justify-content: end; 
        }
 
        @media screen and (max-width: 768px){
          #custom-controls-container{position: relative; bottom: -2.2rem;}
          .anchor-h2container{margin-bottom: -1.8rem;}
          #reviews .reviewsheading {margin-bottom: -1rem;}
          }  
          /*#columnFilter{margin-bottom: .3rem;}*/
          @media screen and (max-width: 640px){
            #custom-controls-container{position: relative; bottom: -2.8rem;}
            #reviews .reviewsheading {
              margin-bottom: -.5rem;
              position:relative; top: 1.2rem;
            }
            } 

            @media screen and (max-width: 330px){
              #reviewsheadingalbums{font-size: 1.9rem;}
            }

            

        .toggle-controls {display: flex; flex-direction: row; border: 1px inset white; border-radius: 5px; padding-top: .26rem; padding-bottom: .26rem; padding-left: .2rem; padding-right: .2rem; width: fit-content; }
            .toggle-controls h3 {font-size: 1rem; color: white;}
            .breaker2{width: .5rem; height: 0; display: block; }
            .toggle-container{border: 1px inset white; border-radius: 5px; width: .85rem; height: .75rem; align-self: center;}
            #alpha-toggle{width: .75rem; height: .75rem; accent-color: transparent; position: absolute;}
        
          #columnFilter {border: 1px inset white; border-radius: 5px;}
          
          #reviews select{background-color: transparent; height: 1.5lh; align-self: start;}
          @media screen and (max-width: 768px){#reviews select, #reviews .toggle-controls{align-self: center;}}
          
          #id-override-dt-column-order {width: 3rem;}
            #id-override-dt-column-order::before{content: "A-Z" / "";}
            #id-override-dt-column-order::after{content: "Z-A" / "";}
            @media screen and (min-width: 0px) {#id-override-dt-column-order::before{position: relative; top: 30px;}}  
            @media screen and (min-width: 500px) {#id-override-dt-column-order::before{position: relative; top: 40px;}}  
            @media screen and (min-width: 700px) {#id-override-dt-column-order::before{position: relative; top: 50px;}}  
            @media screen and (min-width: 1900px) {#id-override-dt-column-order::before{position: relative; top: 55px;}}
 
    #reviews table, #reviews label, #reviews select{color: white;}
    #reviews label{font-size: 0;}
    .dt-search{display: flex; align-items: start; z-index: 10; position: relative;}
    #dt-search-0{width: 100%; color: white; height: 2rem; font-size: 1.25rem;}
        @media screen and (max-width: 500px){#dt-search-0{font-size: 1rem;}}
      #reviews select option{color: black; font-weight: 300; font-size: 1rem;}
        #reviews select {font-size: 1rem;}

      tfoot {border-top: 2px inset white;}
      .dt-layout-table{border-bottom: 1px inset white;}
      .dt-start, .dt-end{color: #e3f5ff;}

      tr {height: 6rem;}
        /*
      .th-sortlabel {position: relative; bottom: 2rem; z-index: 1;}
      .th-sortlabel .dt-column-title{position: relative; bottom: 1rem;}
          @media screen and (min-width: 1391px){
            .th-sortlabel {position: relative; bottom: 1rem;}
            .th-sortlabel .dt-column-title{position: relative; bottom: 2rem;}
          }
          @media screen and (min-width: 2000px){
            .th-sortlabel {position: relative; bottom: .5rem;}
            .th-sortlabel .dt-column-title{position: relative; bottom: 2rem;}
          }*/

        .th-hidden, .td-review-date, .td-work, .td-artist{font-size: 0; visibility: hidden; display: none; width: 0; height: 0;}
        
/*DATATABLE CONTENT/ITEMS*/


/*
.list-review-details{
  z-index: 99; display: flex; flex-direction: column; align-items: center; justify-content: center;
  width: 100%; position: relative; left: -1.8rem;
}
    .list-review-details p{width: 100%; align-self: center; color: #e3f5ff;}
*/
.td-details{
  width: 80vw; height: 45vw;
  display: flex; flex-direction: row;
  align-items: center;
 
}

      .list-review-text{
          margin-right: 2rem;
          width: 40vw; height: fit-content; 
          border-radius: 1rem; 
          display: flex;
          flex-direction: column;
          align-items: center;
      }
            .list-review-text h2{font-size: 1.2rem; padding-left: 10px; padding-right: 10px; text-align: center; transition: opacity 1s ease-in-out;} 
            .list-review-text p {text-align: center;}
            @media screen and (max-width: 1300px){
              .breaker-shortborder{display: block; height: 0; width: 3rem; border-top: 1px inset white; margin-bottom: 1rem;}
          }

          @media screen and (min-width: 1301px){
            .list-review-text{flex-direction: row; justify-content: space-between;}
            .breaker-shortborder{display: block; height: 3rem; width: 0; border-right: 1px inset white; margin-right: 1rem; margin-left: 1rem;}
        }
        .banner-container-bottom, .banner-container-top, .banner-slide-bottom, .banner-slide-top, .banner-text-bottom, .banner-text-top {display: none; visibility: hidden;}

      .list-backgroundedge-container {
        padding: .5rem;
        width: 40vw;
        aspect-ratio: 1/1;
        background-image: url(/images/back2.jpg);
        border-radius: 1rem;
        display: flex;
        align-items: center;
        justify-content: center;
      }

            .list-background-img {
              border-radius: 1rem;
              border: 1px solid white;  overflow: hidden;
            }
/* ... */

